--- a/index.html
+++ b/index.html
@@ -1,60 +1,210 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-
     <title>Node-express-docker by asishrs</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
-
-    <header>
-      <div class="container">
+    <div class="wrapper">
+      <header>
         <h1>Node-express-docker</h1>
-        <h2>NodeJS web application in Docker container</h2>
+        <p>NodeJS web application in Docker container</p>
 
-        <section id="downloads">
-          <a href="https://github.com/asishrs/node-express-docker/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/asishrs/node-express-docker/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/asishrs/node-express-docker" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+        <p class="view"><a href="https://github.com/asishrs/node-express-docker">View the Project on GitHub <small>asishrs/node-express-docker</small></a></p>
 
-    <div class="container">
-      <section id="main_content">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+        <ul>
+          <li><a href="https://github.com/asishrs/node-express-docker/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/asishrs/node-express-docker/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/asishrs/node-express-docker">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <h1>
+<a id="node-express-docker" class="anchor" href="#node-express-docker" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>node-express-docker</h1>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>This is a smaple application to demostarte the ability to Run NodeJs applications on Docker Container.</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="prerequisites" class="anchor" href="#prerequisites" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Prerequisites</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<ul>
+<li>
+<strong>NodeJS</strong> - This applicaion is tested with node v5.0.0 and npm v3.4.0. You can follow instructions <a href="https://nodejs.org/en/">https://nodejs.org/en/</a> to install node and npm on your machine.</li>
+<li>
+<strong>Docker</strong> - This application is tested with docker v1.9.0. You can follow instructions <a href="https://nodejs.org/en/">https://nodejs.org/en/</a> to install Docker on your machine.</li>
+</ul>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="how-to-runtest" class="anchor" href="#how-to-runtest" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How to Run/Test?</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>Make sure that, you have installed Docker on your machine before proceeding.</p>
+
+<ul>
+<li>Build the Image
+Navigate to the project folder and execute below command</li>
+</ul>
+
+<pre><code>docker build -t &lt;your username&gt;/node-express-docker .
+</code></pre>
+
+<ul>
+<li>Start your Docker image. </li>
+</ul>
+
+<pre><code>docker run -p 49160:3000 -d &lt;your username&gt;/node-express-docker
+</code></pre>
+
+<ul>
+<li>Verfiy that your image started. You should see your image in runnig mode there.</li>
+</ul>
+
+<pre><code>docker ps
+</code></pre>
+
+<ul>
+<li>Find the ip-address of the Docker container.</li>
+</ul>
+
+<pre><code>docker-machine ip  &lt;your username&gt;/node-express-docker
+</code></pre>
+
+<ul>
+<li>Test Node web application on Docker Image
+Gran the IP address of your container using above command before proceed.
+Open your favorite browser and type the url http://{ip-address}:49160</li>
+</ul>
+
+<p><strong>Ti-ta</strong> - Your sample application is now runnnig from Docker container.</p>
+
+<p>If you are not seeing the appication running successfully, please read the details below.</p>
+
+<hr>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="steps-in-buidling-the-application-and-docker-image" class="anchor" href="#steps-in-buidling-the-application-and-docker-image" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Steps In buidling the application and Docker Image</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<ul>
+<li>
+<strong>Create a sample application using express generator</strong>
+First lets create a sample node web applicationa and test that locally. Run below to install <strong>express</strong> and <strong>expres-generator</strong> node packages.</li>
+</ul>
+
+<pre><code>npm install -g express-generator
+npm install -g express
+</code></pre>
+
+<p>Once we have express and express-genarator installed, we can create our sample application. Move to the directory where you want to create the application and run below command.</p>
+
+<pre><code>express &lt;application-name&gt;
+</code></pre>
+
+<p>In my case, I ran <strong>express node-express-docker</strong></p>
+
+<ul>
+<li>
+<strong>Run &amp; test</strong> application - To run the application navigate to the application directory and run below commands.</li>
+</ul>
+
+<pre><code>npm install
+npm start
+</code></pre>
+
+<p>Now, open your favorite browser and type the url http://localhost:3000</p>
+
+<p><strong>Note:</strong> If you are getting an issue, go back to the console where we started the application and check the logs.</p>
+
+<ul>
+<li>
+<strong>Create a Docker container based on Ubuntu and install node on that</strong>
+Now that we have the application up and runnig, we can start Docker work. Make sure you have installed docker before stating this. Verify that you have Docker by running below command.</li>
+</ul>
+
+<pre><code>docker version
+</code></pre>
+
+<p><strong>Optional:</strong> In case you are getting a message 'Cannot connect to the Docker daemon. Is the docker daemon running on this host?', you need to set the environment varaibles for Docker by running below. In the comamnd default is the name of environment. You have to change that if you are using a different environment.</p>
+
+<pre><code>eval "$(docker-machine env default)"
+</code></pre>
+
+<p>In this case, we are going to use latest version on Ubuntu to create an image of our application. Docker needs a file called Dockerfile to build an image.
+Open the Dockerfile that I have in the project and copy the contents to your Docker file. This file contains instruction to get the latest ubuntu image and install node and npm.
+After this, we have to copy our code to the container and tell Docker to expose the application port. Finally we need to tell Docker the command that it needs to run when we strat this image.
+You can read more about the Dockerfile creation here - <a href="http://docs.docker.com/engine/reference/builder/">http://docs.docker.com/engine/reference/builder/</a></p>
+
+<p>Once you have the Docker file ready, we need to build the image. Run below comamnd to build the image.</p>
+
+<pre><code>docker build -t &lt;your username&gt;/node-express-docker .
+</code></pre>
+
+<p>Verify that the image is ready by running below command. You'll see you image listed there.</p>
+
+<pre><code>docker images
+</code></pre>
+
+<p>Start your Docker image. We are asking to run the image and expose the port 3000 on the container to 49160 on host.
+Running your image with -d runs the container in detached mode, leaving the container running in the background. The -p flag redirects a public port to a private port in the container.</p>
+
+<pre><code>docker run -p 49160:3000 -d &lt;your username&gt;/node-express-docker
+</code></pre>
+
+<p>Verfiy that your image started. You should see your image in runnig mode there.</p>
+
+<pre><code>docker ps
+</code></pre>
+
+<p><strong>Optional:</strong> If you cannot see your image in the list, you may need to run the application in regualr mode by removing the -d option. This will help you to check for any errors.</p>
+
+<pre><code>docker run -p 49160:3000 &lt;your username&gt;/node-express-docker
+</code></pre>
+
+<p>Find the ip-address of the Docker container.</p>
+
+<pre><code>docker-machine ip  &lt;your username&gt;/node-express-docker
+</code></pre>
+
+<p>Now we are all set to run the application. Open your favorite browser and type the url http://:49160</p>
+
+<hr>
+
+<p>If you want to monitor the application you can follow below steps.</p>
+
+<ul>
+<li>Find the conatiner id by running</li>
+</ul>
+
+<pre><code>docker ps
+</code></pre>
+
+<ul>
+<li>Get the status by passing container id to below command.</li>
+</ul>
+
+<pre><code>docker stats &lt;container-id&gt;
+</code></pre>
+
+<ul>
+<li>To stop the container, you can run below command</li>
+</ul>
+
+<pre><code>docker stop &lt;container-id&gt;
+</code></pre>
       </section>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/asishrs">asishrs</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
